--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -21,11 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.10"]
-        use-cryptodome: [""]
-        include:
-          - python-version: "3.10"
-            use-cryptodome: "false"
+        python-version: ["3.8", "3.9", "3.10", "3.10", "3.11"]
     steps:
     - name: Checkout Code
       uses: actions/checkout@v3
