--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -21,11 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.10"]
-        use-cryptodome: [""]
-        include:
-          - python-version: "3.10"
-            use-cryptodome: "false"
+        python-version: ["3.8", "3.9", "3.10"]
     steps:
     - name: Checkout Code
       uses: actions/checkout@v3
@@ -81,7 +77,7 @@ jobs:
 
       - name: Test running installed package
         working-directory: /tmp
-        run: python -c "import PyPDF2;print(PyPDF2.__version__)"
+        run: python -c "import idnow_responses;print(idnow_responses.__version__)"
 
       # - name: Release to pypi if tagged.
       #   if: startsWith(github.ref, 'refs/tags')
@@ -92,31 +88,3 @@ jobs:
       - name: Create GitHub release if tagged.
         if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
-
-  coverage:
-    name: Combine & check coverage.
-    runs-on: ubuntu-latest
-    needs: tests
-
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
-        with:
-          # Use latest Python, so it understands all syntax.
-          python-version: ${{env.PYTHON_LATEST}}
-
-      - run: python -m pip install --upgrade coverage[toml]
-
-      - uses: actions/download-artifact@v3
-        with:
-          name: coverage-data
-
-      - name: Combine coverage & create xml report
-        run: |
-          python -m coverage combine
-          python -m coverage xml
-      - name: Upload Coverage to Codecov
-        uses: codecov/codecov-action@v2
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./coverage.xml
